Temporarily capitalize the first letter in dividiti for sorting.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -328,7 +328,7 @@
     "dfs = []\n",
     "# FOR EACH division.\n",
     "for division in divisions:\n",
-    "    #if division != 'open': continue # skip for now\n",
+    "    #if division == 'open': continue # skip\n",
     "    # FOR EACH submitter.\n",
     "    submitters_dir = os.path.join(results_path, division)\n",
     "    submitters = [ fn for fn in os.listdir(submitters_dir) if os.path.isdir(os.path.join(submitters_dir, fn)) ]\n",
@@ -534,7 +534,7 @@
     "                    experiment_dir = os.path.join(benchmark_dir, scenario)\n",
     "                    # Extract accuracy.\n",
     "                    if submitter == 'Hailo' and benchmark == 'ssd-small':\n",
-    "                         # https://github.com/mlperf/submissions_inference_0_5/issues/287\n",
+    "                        # https://github.com/mlperf/submissions_inference_0_5/issues/287\n",
     "                        task = 'OD'\n",
     "                        accuracy = 21.920 # ssd-small/SingleStream/accuracy/results.json\n",
     "                    else:\n",
@@ -699,7 +699,11 @@
     "\n",
     "# Concatenate all thus constructed DataFrames (i.e. stack on top of each other).\n",
     "df = pd.concat(dfs)\n",
-    "df.sort_index(ascending=True, inplace=True)\n",
+    "# Temporarily capitalize the first letter in 'dividiti' for correct sorting and then back.\n",
+    "df = df \\\n",
+    "    .rename(index={'dividiti':'Dividiti', 'dividiti + PoliMi':'Dividiti + PoliMi'}) \\\n",
+    "    .sort_index(ascending=True) \\\n",
+    "    .rename(index={'Dividiti':'dividiti', 'Dividiti + PoliMi':'dividiti + PoliMi'}) \\\n",
     "# Reset the index, but keep Division and Category there.\n",
     "df = df.reset_index(level=index[2:])\n",
     "df['ID'] = [ 'Inf-0.5-{:03d}'.format(ID) for ID in range(1, len(df)+1) ]\n",
@@ -752,7 +756,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Ones'] = 1"
+    "df['Count'] = 1"
    ]
   },
   {
@@ -761,7 +765,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Ones'].groupby(level='Division').sum()"
+    "df['Count'].groupby(level='Division').sum()"
    ]
   },
   {
@@ -770,7 +774,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Ones'].groupby(level=['Division', 'Category']).sum()"
+    "df['Count'].groupby(level=['Division', 'Category']).sum()"
    ]
   },
   {
@@ -786,9 +790,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.reset_index()[['Division', 'Submitter', 'Ones']] \\\n",
+    "df_num_rows_per_submitter_per_division = df \\\n",
+    "    .reset_index()[['Division', 'Submitter', 'Count']] \\\n",
     "    .set_index(['Submitter', 'Division']) \\\n",
-    "    .groupby(level=['Submitter', 'Division']).sum()"
+    "    .groupby(level=['Submitter', 'Division']).sum()\n",
+    "display_in_full(df_num_rows_per_submitter_per_division)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_num_rows_per_submitter_per_division.plot.pie(y='Count', figsize=(24,24))"
    ]
   },
   {
