Add clone command for mlperf/inference_results_v0.5 repo.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -314,6 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# git clone https://github.com/mlperf/inference_results_v0.5 <results_path>\n",
     "results_path = '/home/anton/projects/mlperf/submissions_inference_0_5'"
    ]
   },
