Add pie charts with results per submitter.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -799,19 +799,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number of results per division per submitter per benchmark"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_num_rows_per_submitter_per_division.plot.pie(y='Count', figsize=(24,24))"
+    "indices = [ 'Division', 'Submitter' ]\n",
+    "df_num_results_per_division_per_submitter_per_benchmark = df \\\n",
+    "    .reset_index() \\\n",
+    "    [indices + performance_columns] \\\n",
+    "    .set_index(indices) \\\n",
+    "    .apply(pd.to_numeric) \\\n",
+    "    .groupby(level=indices).count()\n",
+    "display_in_full(df_num_results_per_division_per_submitter_per_benchmark)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_num_results_per_division_per_submitter = df_num_results_per_division_per_submitter_per_benchmark.sum(axis=1)\n",
+    "df_num_results_per_division_per_submitter"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TODO: Number of results per submitter"
+    "### Pie charts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import cm\n",
+    "%matplotlib inline\n",
+    "mp.rcParams['figure.dpi'] = 200\n",
+    "mp.rcParams['font.size'] = 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_num_results(df, autopct='%1.0f%%', pctdistance=0.8, labeldistance=1.1,\n",
+    "                    explode_condition=False, startangle=0, shadow=False):\n",
+    "    results = df\n",
+    "    submitters = df.index\n",
+    "    explode = [ 0.1 if explode_condition else 0 for submitter in submitters ]\n",
+    "    \n",
+    "    plt.figure()\n",
+    "    plt.pie(results, labels=submitters, autopct=autopct,\n",
+    "            pctdistance=pctdistance, labeldistance=labeldistance,\n",
+    "            explode=explode, startangle=35, shadow=shadow)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "print('Results per submitter: Closed')\n",
+    "plot_num_results(df_num_results_per_division_per_submitter.loc['Closed'])\n",
+    "\n",
+    "print('Results per submitter: Open')\n",
+    "plot_num_results(df_num_results_per_division_per_submitter.loc['Open'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_num_results_per_submitter = df_num_results_per_division_per_submitter \\\n",
+    "    .reorder_levels(['Submitter', 'Division']) \\\n",
+    "    .groupby(level='Submitter') \\\n",
+    "    .sum()\n",
+    "plot_num_results(df_num_results_per_submitter)"
    ]
   },
   {
