Improve per submitter pie charts.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -847,8 +847,8 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import cm\n",
     "%matplotlib inline\n",
-    "mp.rcParams['figure.dpi'] = 200\n",
-    "mp.rcParams['font.size'] = 12"
+    "mp.rcParams['figure.dpi'] = 300\n",
+    "mp.rcParams['font.size'] = 10"
    ]
   },
   {
@@ -857,25 +857,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_num_results(df, autopct='%1.0f%%', pctdistance=0.8, labeldistance=1.1,\n",
-    "                    explode_condition=False, startangle=0, shadow=False):\n",
-    "    results = df\n",
-    "    submitters = df.index\n",
-    "    explode = [ 0.1 if explode_condition else 0 for submitter in submitters ]\n",
-    "    \n",
+    "def plot_num_results(df_num_results_per_submitter, autopct='%1.1f%%', pctdistance=0.8, labeldistance=1.1,\n",
+    "                    explode_submitter=['dividiti'], startangle=0, shadow=False, title='Results per submitter', N=5):\n",
+    "\n",
+    "    df_num_results_per_submitter_descending = pd.DataFrame({\n",
+    "        'Submitter' : df_num_results_per_submitter.index,\n",
+    "        '#Results'  : df_num_results_per_submitter.values}) \\\n",
+    "        .sort_values('#Results', ascending=False)\n",
+    "\n",
+    "    df_num_results_per_submitter_topN = df_num_results_per_submitter_descending[:N].copy()\n",
+    "\n",
+    "    df_num_results_per_submitter_others = pd.DataFrame(data = {\n",
+    "        'Submitter' : ['Others'],\n",
+    "        '#Results'  : [df_num_results_per_submitter_descending['#Results'][N:].sum()]})\n",
+    "\n",
+    "    df_num_results_per_submitter_topN_and_others = \\\n",
+    "        pd.concat([df_num_results_per_submitter_topN, df_num_results_per_submitter_others]) \\\n",
+    "        .set_index('Submitter')\n",
+    "\n",
+    "    results = df_num_results_per_submitter_topN_and_others['#Results']\n",
+    "    submitters = df_num_results_per_submitter_topN_and_others.index\n",
+    "    explode = [ 0.1 if submitter in explode_submitter else 0 for submitter in submitters ]\n",
+    "\n",
     "    plt.figure()\n",
     "    plt.pie(results, labels=submitters, autopct=autopct,\n",
     "            pctdistance=pctdistance, labeldistance=labeldistance,\n",
     "            explode=explode, startangle=35, shadow=shadow)\n",
+    "    plt.title(title)\n",
     "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "print('Results per submitter: Closed')\n",
-    "plot_num_results(df_num_results_per_division_per_submitter.loc['Closed'])\n",
-    "\n",
-    "print('Results per submitter: Open')\n",
-    "plot_num_results(df_num_results_per_division_per_submitter.loc['Open'])"
+    "    plt.show()"
    ]
   },
   {
@@ -884,11 +894,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_num_results_per_submitter = df_num_results_per_division_per_submitter \\\n",
-    "    .reorder_levels(['Submitter', 'Division']) \\\n",
-    "    .groupby(level='Submitter') \\\n",
-    "    .sum()\n",
-    "plot_num_results(df_num_results_per_submitter)"
+    "plot_num_results(\n",
+    "    df_num_results_per_division_per_submitter.droplevel('Division') \\\n",
+    "    .groupby(level='Submitter').sum(), N=9, explode_submitter=['dividiti', 'dividiti + PoliMi'])\n",
+    "\n",
+    "for division, N in zip([ 'Closed', 'Open' ], [ 10, 3 ]):\n",
+    "    explode_submitter = [] if division == 'Open' else ['dividiti']\n",
+    "    plot_num_results(\n",
+    "        df_num_results_per_division_per_submitter.loc[division],\n",
+    "        title='Results per submitter: {}'.format(division), N=N, explode_submitter=explode_submitter)"
    ]
   },
   {
