Load/store the results table from/to cache.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -305,6 +305,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FIXME: Point to the visualization plugin.\n",
+    "repo_uoa = 'ck-mlperf'\n",
+    "module_uoa = 'jnotebook'\n",
+    "data_uoa = 'mlperf-inference-v0.5'\n",
+    "\n",
+    "import ck.kernel as ck\n",
+    "r = ck.access({'action':'find', 'repo_uoa':repo_uoa, 'module_uoa':module_uoa, 'data_uoa':data_uoa})\n",
+    "if r['return']>0:\n",
+    "    print('Error: %s' % r['error'])\n",
+    "    exit(1)\n",
+    "cache_path = r['path']\n",
+    "cache_name = 'mlperf-inference-v0.5-results.zip'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.path.join(cache_path, cache_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Code"
    ]
   },
@@ -321,9 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfs = []\n",
@@ -696,24 +730,44 @@
     "            # END OF FOR EACH benchmark\n",
     "        # END OF FOR EACH system\n",
     "    # END OF FOR EACH submitter\n",
-    "# END OF FOR EACH division\n",
+    "# END OF FOR EACH division"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "cache = os.path.join(cache_path, cache_name)\n",
+    "if os.path.exists(cache):\n",
+    "    # Load the table from cache.\n",
+    "    print('Loading the results table from cache ...')\n",
+    "    df = pd.read_pickle(cache)\n",
+    "else:\n",
+    "    # Concatenate all thus constructed DataFrames (i.e. stack on top of each other).\n",
+    "    df = pd.concat(dfs)\n",
+    "    # Temporarily capitalize the first letter in 'dividiti' for correct sorting and then back.\n",
+    "    df = df \\\n",
+    "        .rename(index={'dividiti':'Dividiti', 'dividiti + PoliMi':'Dividiti + PoliMi'}) \\\n",
+    "        .sort_index(ascending=True) \\\n",
+    "        .rename(index={'Dividiti':'dividiti', 'Dividiti + PoliMi':'dividiti + PoliMi'}) \\\n",
+    "    # Reset the index, but keep Division and Category there.\n",
+    "    df = df.reset_index(level=index[2:])\n",
+    "    df['ID'] = [ 'Inf-0.5-{:03d}'.format(ID) for ID in range(1, len(df)+1) ]\n",
+    "    # Mimic the official template.\n",
+    "    columns = [ 'ID', 'Submitter', 'System', 'Benchmark' ]\n",
+    "    columns += score_columns\n",
+    "    columns += [ 'Processor', 'Processor #', 'Accelerator', 'Accelerator #', 'Software',\n",
+    "                'FF_M', 'FF_D', 'FF_S', 'FF_E', 'Details', 'Code', 'Notes' ]\n",
+    "    # Finalize the table.\n",
+    "    df = df[columns]\n",
+    "    # Store the table.\n",
+    "    print('Storing the results table to cache ...')\n",
+    "    df.to_pickle(cache)\n",
     "\n",
-    "# Concatenate all thus constructed DataFrames (i.e. stack on top of each other).\n",
-    "df = pd.concat(dfs)\n",
-    "# Temporarily capitalize the first letter in 'dividiti' for correct sorting and then back.\n",
-    "df = df \\\n",
-    "    .rename(index={'dividiti':'Dividiti', 'dividiti + PoliMi':'Dividiti + PoliMi'}) \\\n",
-    "    .sort_index(ascending=True) \\\n",
-    "    .rename(index={'Dividiti':'dividiti', 'Dividiti + PoliMi':'dividiti + PoliMi'}) \\\n",
-    "# Reset the index, but keep Division and Category there.\n",
-    "df = df.reset_index(level=index[2:])\n",
-    "df['ID'] = [ 'Inf-0.5-{:03d}'.format(ID) for ID in range(1, len(df)+1) ]\n",
-    "# Mimic the official template.\n",
-    "columns = [ 'ID', 'Submitter', 'System', 'Benchmark' ]\n",
-    "columns += score_columns\n",
-    "columns += [ 'Processor', 'Processor #', 'Accelerator', 'Accelerator #', 'Software',\n",
-    "            'FF_M', 'FF_D', 'FF_S', 'FF_E', 'Details', 'Code', 'Notes' ]\n",
-    "df = df[columns]\n",
     "display_in_full(df)"
    ]
   },
@@ -894,15 +948,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_num_results(\n",
-    "    df_num_results_per_division_per_submitter.droplevel('Division') \\\n",
-    "    .groupby(level='Submitter').sum(), N=9, explode_submitter=['dividiti', 'dividiti + PoliMi'])\n",
+    "# plot_num_results(\n",
+    "#     df_num_results_per_division_per_submitter.droplevel('Division') \\\n",
+    "#     .groupby(level='Submitter').sum(), N=9, explode_submitter=['dividiti', 'dividiti + PoliMi'])\n",
     "\n",
-    "for division, N in zip([ 'Closed', 'Open' ], [ 10, 3 ]):\n",
-    "    explode_submitter = [] if division == 'Open' else ['dividiti']\n",
-    "    plot_num_results(\n",
-    "        df_num_results_per_division_per_submitter.loc[division],\n",
-    "        title='Results per submitter: {}'.format(division), N=N, explode_submitter=explode_submitter)"
+    "# for division, N in zip([ 'Closed', 'Open' ], [ 10, 3 ]):\n",
+    "#     explode_submitter = [] if division == 'Open' else ['dividiti']\n",
+    "#     plot_num_results(\n",
+    "#         df_num_results_per_division_per_submitter.loc[division],\n",
+    "#         title='Results per submitter: {}'.format(division), N=N, explode_submitter=explode_submitter)"
    ]
   },
   {
