Save pie chart for press release.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -61,7 +61,12 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import cm\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "default_dpi = 300\n",
+    "default_fontsize = 12\n",
+    "mp.rcParams['figure.dpi'] = default_dpi\n",
+    "mp.rcParams['font.size'] = default_fontsize"
    ]
   },
   {
@@ -898,48 +903,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib import cm\n",
-    "%matplotlib inline\n",
-    "mp.rcParams['figure.dpi'] = 300\n",
-    "mp.rcParams['font.size'] = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_num_results(df_num_results_per_submitter, autopct='%1.1f%%', pctdistance=0.8, labeldistance=1.1,\n",
-    "                    explode_submitter=['dividiti'], startangle=0, shadow=False, title='Results per submitter', N=5):\n",
+    "def plot_num_results(df_num_results_per_submitter, autopct='%1.0f%%', pctdistance=0.8, labeldistance=1.1, topN=5,\n",
+    "                     explode_submitters=['dividiti'], explode_distance=0.05, startangle=0, shadow=False,\n",
+    "                     title='MLPerf Inference v0.5 - Results per Submitter', fname=None, ftype='jpg'):\n",
     "\n",
     "    df_num_results_per_submitter_descending = pd.DataFrame({\n",
     "        'Submitter' : df_num_results_per_submitter.index,\n",
     "        '#Results'  : df_num_results_per_submitter.values}) \\\n",
     "        .sort_values('#Results', ascending=False)\n",
     "\n",
-    "    df_num_results_per_submitter_topN = df_num_results_per_submitter_descending[:N].copy()\n",
+    "    df_num_results_per_submitter_topN = df_num_results_per_submitter_descending[:topN].copy()\n",
     "\n",
     "    df_num_results_per_submitter_others = pd.DataFrame(data = {\n",
     "        'Submitter' : ['Others'],\n",
-    "        '#Results'  : [df_num_results_per_submitter_descending['#Results'][N:].sum()]})\n",
+    "        '#Results'  : [df_num_results_per_submitter_descending['#Results'][topN:].sum()]})\n",
     "\n",
     "    df_num_results_per_submitter_topN_and_others = \\\n",
     "        pd.concat([df_num_results_per_submitter_topN, df_num_results_per_submitter_others]) \\\n",
-    "        .set_index('Submitter')\n",
+    "        .set_index('Submitter') \\\n",
+    "        .sort_values('Submitter', ascending=False)\n",
     "\n",
     "    results = df_num_results_per_submitter_topN_and_others['#Results']\n",
     "    submitters = df_num_results_per_submitter_topN_and_others.index\n",
-    "    explode = [ 0.1 if submitter in explode_submitter else 0 for submitter in submitters ]\n",
+    "    explode = [ explode_distance if submitter in explode_submitters else 0 for submitter in submitters ]\n",
     "\n",
     "    plt.figure()\n",
     "    plt.pie(results, labels=submitters, autopct=autopct,\n",
     "            pctdistance=pctdistance, labeldistance=labeldistance,\n",
     "            explode=explode, startangle=35, shadow=shadow)\n",
+    "    \n",
     "    plt.title(title)\n",
     "    plt.tight_layout()\n",
+    "    if fname is not None:\n",
+    "        # A lazy way to use the default file name.\n",
+    "        if fname == '': fname = '{}.{}'.format(title, ftype)\n",
+    "        color = 'darkgray'\n",
+    "        plt.savefig(fname=fname, format=ftype, dpi=200, quality=90, optimize=True, bbox_inches='tight',\n",
+    "                    facecolor=color, edgecolor=color)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot all"
    ]
   },
   {
@@ -948,15 +956,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot_num_results(\n",
-    "#     df_num_results_per_division_per_submitter.droplevel('Division') \\\n",
-    "#     .groupby(level='Submitter').sum(), N=9, explode_submitter=['dividiti', 'dividiti + PoliMi'])\n",
-    "\n",
-    "# for division, N in zip([ 'Closed', 'Open' ], [ 10, 3 ]):\n",
-    "#     explode_submitter = [] if division == 'Open' else ['dividiti']\n",
-    "#     plot_num_results(\n",
-    "#         df_num_results_per_division_per_submitter.loc[division],\n",
-    "#         title='Results per submitter: {}'.format(division), N=N, explode_submitter=explode_submitter)"
+    "plot_num_results(\n",
+    "    df_num_results_per_division_per_submitter.droplevel('Division').groupby(level='Submitter').sum(),\n",
+    "    topN=8, explode_submitters=['dividiti', 'dividiti + PoliMi'], fname='')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot by division"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for division, topN in zip([ 'Closed', 'Open' ], [ 10, 3 ]):\n",
+    "    explode_submitters = [] if division == 'Open' else ['dividiti']\n",
+    "    plot_num_results(\n",
+    "        df_num_results_per_division_per_submitter.loc[division],\n",
+    "        title='MLPerf Inference v0.5 - {} Division - Results per Submitter'.format(division),\n",
+    "        topN=topN, explode_submitters=explode_submitters\n",
+    "    )"
    ]
   },
   {
