Update results notebook.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -319,10 +319,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FIXME: Point to the visualization plugin.\n",
     "repo_uoa = 'ck-mlperf'\n",
-    "module_uoa = 'jnotebook'\n",
-    "data_uoa = 'mlperf-inference-v0.5'\n",
+    "module_uoa = 'module'\n",
+    "data_uoa = 'mlperf.inference'\n",
     "\n",
     "import ck.kernel as ck\n",
     "r = ck.access({'action':'find', 'repo_uoa':repo_uoa, 'module_uoa':module_uoa, 'data_uoa':data_uoa})\n",
@@ -741,12 +740,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "cache = os.path.join(cache_path, cache_name)\n",
+    "#### cache = os.path.join(cache_path, cache_name)\n",
+    "!rm -f $cache\n",
     "if os.path.exists(cache):\n",
     "    # Load the table from cache.\n",
     "    print('Loading the results table from cache ...')\n",
@@ -769,11 +767,16 @@
     "                'FF_M', 'FF_D', 'FF_S', 'FF_E', 'Details', 'Code', 'Notes' ]\n",
     "    # Finalize the table.\n",
     "    df = df[columns]\n",
-    "    # Store the table.\n",
+    "    \n",
+    "    # Store the table in a simplified format.\n",
     "    print('Storing the results table to cache ...')\n",
-    "    df.to_pickle(cache)\n",
+    "    #df_cache = df[[ 'ID', 'Submitter' ] + score_columns].set_index(['ID'])\n",
+    "    df_cache = df\n",
+    "    df_cache[score_columns] = df_cache[score_columns].apply(pd.to_numeric).astype('float32')\n",
+    "    df_cache.to_pickle(cache)\n",
+    "    display_in_full(df_cache)\n",
     "\n",
-    "display_in_full(df)"
+    "# display_in_full(df)"
    ]
   },
   {
@@ -905,7 +908,7 @@
    "source": [
     "def plot_num_results(df_num_results_per_submitter, autopct='%1.0f%%', pctdistance=0.8, labeldistance=1.1, topN=5,\n",
     "                     explode_submitters=['dividiti'], explode_distance=0.05, startangle=0, shadow=False,\n",
-    "                     title='MLPerf Inference v0.5 - Results per Submitter', fname=None, ftype='jpg'):\n",
+    "                     title='MLPerf Inference v0.5 - Results per Submitter', fname=None, ftype='jpg', color = 'darkgray'):\n",
     "\n",
     "    df_num_results_per_submitter_descending = pd.DataFrame({\n",
     "        'Submitter' : df_num_results_per_submitter.index,\n",
@@ -928,6 +931,7 @@
     "    explode = [ explode_distance if submitter in explode_submitters else 0 for submitter in submitters ]\n",
     "\n",
     "    plt.figure()\n",
+    "    mp.rcParams['figure.dpi'] = default_dpi\n",
     "    plt.pie(results, labels=submitters, autopct=autopct,\n",
     "            pctdistance=pctdistance, labeldistance=labeldistance,\n",
     "            explode=explode, startangle=35, shadow=shadow)\n",
@@ -936,29 +940,10 @@
     "    plt.tight_layout()\n",
     "    if fname is not None:\n",
     "        # A lazy way to use the default file name.\n",
-    "        if fname == '': fname = '{}.{}'.format(title, ftype)\n",
-    "        color = 'darkgray'\n",
-    "        plt.savefig(fname=fname, format=ftype, dpi=200, quality=90, optimize=True, bbox_inches='tight',\n",
+    "        if fname == '': fname = '{}.{}'.format(title, ftype)    \n",
+    "        plt.savefig(fname=fname, format=ftype, dpi=100, quality=90, optimize=True, bbox_inches='tight',\n",
     "                    facecolor=color, edgecolor=color)\n",
     "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Plot all"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_num_results(\n",
-    "    df_num_results_per_division_per_submitter.droplevel('Division').groupby(level='Submitter').sum(),\n",
-    "    topN=8, explode_submitters=['dividiti', 'dividiti + PoliMi'], fname='')"
    ]
   },
   {
@@ -981,6 +966,24 @@
     "        title='MLPerf Inference v0.5 - {} Division - Results per Submitter'.format(division),\n",
     "        topN=topN, explode_submitters=explode_submitters\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_num_results(\n",
+    "    df_num_results_per_division_per_submitter.droplevel('Division').groupby(level='Submitter').sum(),\n",
+    "    topN=8, explode_submitters=['dividiti', 'dividiti + PoliMi'], fname='')"
    ]
   },
   {
