Two separate modes for results table: spreadsheet and dashboard.

--- a/jnotebook/mlperf-inference-v0.5/systems.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/systems.ipynb
@@ -281,7 +281,7 @@
     "# Create a Pandas Excel writer using XlsxWriter as the engine.\n",
     "from pandas import ExcelWriter\n",
     "# NB: Cannot use dot for 'v0.5', as otherwise the engine complains about an unknown extension.\n",
-    "xlsx_filename = 'MLPerf Inference v0_5 Systems (Automatically Generated).xlsx'\n",
+    "xlsx_filename = 'MLPerf Inference v0_5 - Systems (Automatically Generated).xlsx'\n",
     "xlsx_writer = ExcelWriter(xlsx_filename, engine='xlsxwriter', options={'strings_to_urls': True})\n",
     "# Write the DataFrame to one sheet and the transposed DataFrame to another.\n",
     "df.to_excel(xlsx_writer, sheet_name='ALL', index=True)\n",
