Place one result per row in the dashboard mode.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -318,17 +318,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# \n",
+    "# Clone the results directory:\n",
+    "# git clone https://github.com/mlperf/inference_results_v0.5 <results_path>\n",
     "\n",
-    "# Two modes: the 'spreadsheet' mode tries to mimic the official submission table as much as possible;\n",
+    "# We use two modes: the 'spreadsheet' mode tries to mimic the official submission table as much as possible;\n",
     "# the 'dashboard' mode uses a more appropriate layout for the CK dashboard.\n",
     "def get_data(results_path='/home/anton/projects/mlperf/submissions_inference_0_5', mode='spreadsheet'):\n",
     "    dfs = []\n",
@@ -497,7 +491,8 @@
     "                    'Division', 'Category', 'Submitter', 'Accelerator #', 'System', 'Software', 'Benchmark' #, 'Task', 'Scenario'\n",
     "                ]\n",
     "                # Reset all scores.\n",
-    "                data[0].update({ score : '' for score in score_columns })\n",
+    "                if mode == 'spreadsheet':\n",
+    "                    data[0].update({ score : '' for score in score_columns })\n",
     "\n",
     "                # FOR EACH benchmark.\n",
     "                benchmarks = [ fn for fn in os.listdir(system_dir) if os.path.isdir(os.path.join(system_dir, fn)) ]\n",
@@ -534,6 +529,8 @@
     "                    benchmark_dir = os.path.join(system_dir, benchmark)\n",
     "                    scenarios = [ fn for fn in os.listdir(benchmark_dir) if os.path.isdir(os.path.join(benchmark_dir, fn)) ]\n",
     "                    for scenario in scenarios:\n",
+    "                        if mode != 'spreadsheet':\n",
+    "                            data[0].update({ score : '' for score in score_columns })\n",
     "                        scenario_str = scenario_to_str.get(scenario,'')\n",
     "                        if scenario_str not in [ 'SingleStream', 'MultiStream', 'Server', 'Offline' ]: continue\n",
     "                        experiment_dir = os.path.join(benchmark_dir, scenario)\n",
@@ -692,13 +689,19 @@
     "                        else:\n",
     "                            print('Skipping unsupported task/scenario combination!')\n",
     "                            continue\n",
+    "                        if mode != 'spreadsheet':\n",
+    "                            df = pd.DataFrame(data)\n",
+    "                            df = df.set_index(index)\n",
+    "                            dfs.append(df)\n",
     "                    # END OF FOR EACH scenario\n",
-    "                    # For closed, multiple benchmarks can share the same row, so the Benchmark field can be misleading.\n",
-    "                    if mode == 'spreadsheet' and division == 'closed': data[0]['Benchmark'] = ''\n",
-    "                    if is_last_benchmark or (division == 'open' and submitter == 'dividiti'):\n",
-    "                        df = pd.DataFrame(data)\n",
-    "                        df = df.set_index(index)\n",
-    "                        dfs.append(df)\n",
+    "                    if mode == 'spreadsheet':\n",
+    "                        # For closed, multiple benchmarks can share the same row, so the Benchmark field can be misleading.\n",
+    "                        if division == 'closed': data[0]['Benchmark'] = ''\n",
+    "                        if is_last_benchmark or (division == 'open' and submitter == 'dividiti'):\n",
+    "                            df = pd.DataFrame(data)\n",
+    "                            df = df.set_index(index)\n",
+    "                            dfs.append(df)\n",
+    "                    # For the spreadsheet mode, include multiple benchmarks per row.\n",
     "                # END OF FOR EACH benchmark\n",
     "            # END OF FOR EACH system\n",
     "        # END OF FOR EACH submitter\n",
@@ -908,7 +911,7 @@
     "# Create a Pandas Excel writer using XlsxWriter as the engine.\n",
     "from pandas import ExcelWriter\n",
     "# NB: Cannot use dot for 'v0.5', as otherwise the engine complains about an unknown extension.\n",
-    "xlsx_filename = 'MLPerf Inference Results v0_5 (Automatically Generated).xlsx'\n",
+    "xlsx_filename = 'MLPerf Inference v0_5 - Results (Automatically Generated).xlsx'\n",
     "xlsx_writer = ExcelWriter(xlsx_filename, engine='xlsxwriter', options={'strings_to_urls': True})\n",
     "for division in df.index.unique(level='Division'):\n",
     "    df_d = df.loc[division]\n",
