Fix resnet50 inconsistency in Tencent and Inspur submissions.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -377,7 +377,7 @@
     "\n",
     "                # Default form factors and notes.\n",
     "                ff_m = ff_d = ff_s = ff_e = ''\n",
-    "                notes = ''                \n",
+    "                notes = ''\n",
     "\n",
     "                # Submitter-specific form factors and notes.\n",
     "                submitter_str = submitter\n",
@@ -498,6 +498,8 @@
     "                benchmarks = [ fn for fn in os.listdir(system_dir) if os.path.isdir(os.path.join(system_dir, fn)) ]\n",
     "                for (benchmark, benchmark_idx) in zip(benchmarks, range(len(benchmarks))):\n",
     "                    is_last_benchmark = (benchmark_idx == len(benchmarks) - 1)\n",
+    "                    # Tencent and Inspur use resnet50.\n",
+    "                    if benchmark == 'resnet50': benchmark = 'resnet'\n",
     "                    # Benchmark (with notes).\n",
     "                    benchmark_dict = non_imagenet_benchmarks.get(benchmark)\n",
     "                    if benchmark_dict:\n",
