Add Task, Scenario. Do not use IC2 and OD2 for dashboard.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -499,20 +499,20 @@
     "                for (benchmark, benchmark_idx) in zip(benchmarks, range(len(benchmarks))):\n",
     "                    is_last_benchmark = (benchmark_idx == len(benchmarks) - 1)\n",
     "                    # Tencent and Inspur use resnet50.\n",
-    "                    if benchmark == 'resnet50': benchmark = 'resnet'\n",
+    "                    benchmark_name = 'resnet' if benchmark == 'resnet50' else benchmark\n",
     "                    # Benchmark (with notes).\n",
-    "                    benchmark_dict = non_imagenet_benchmarks.get(benchmark)\n",
+    "                    benchmark_dict = non_imagenet_benchmarks.get(benchmark_name)\n",
     "                    if benchmark_dict:\n",
     "                        width = benchmark_dict['width']\n",
     "                        height = benchmark_dict['height']\n",
     "                    else:\n",
-    "                        if benchmark.endswith('96'):\n",
+    "                        if benchmark_name.endswith('96'):\n",
     "                            side = 96\n",
-    "                        elif benchmark.endswith('128'):\n",
+    "                        elif benchmark_name.endswith('128'):\n",
     "                            side = 128\n",
-    "                        elif benchmark.endswith('160'):\n",
+    "                        elif benchmark_name.endswith('160'):\n",
     "                            side = 160\n",
-    "                        elif benchmark.endswith('192'):\n",
+    "                        elif benchmark_name.endswith('192'):\n",
     "                            side = 192\n",
     "                        else:\n",
     "                            side = 224\n",
@@ -520,10 +520,10 @@
     "                        height = side\n",
     "                    if width != -1 and height != -1:\n",
     "                        # Benchmark (width x height).\n",
-    "                        benchmark_with_notes = '{} ({}x{})'.format(benchmark, width, height)\n",
+    "                        benchmark_with_notes = '{} ({}x{})'.format(benchmark_name, width, height)\n",
     "                    else:\n",
     "                        # GNMT.\n",
-    "                        benchmark_with_notes = benchmark                \n",
+    "                        benchmark_with_notes = benchmark_name\n",
     "                    # TODO: Rename to 'Model used, if not Closed Division default' for Open.\n",
     "                    data[0]['Benchmark'] = benchmark_with_notes\n",
     "\n",
@@ -561,7 +561,7 @@
     "                            else:\n",
     "                                pprint(accuracy_txt)\n",
     "                                raise Exception('Failed to extract accuracy information from \"%s\"' % accuracy_line)\n",
-    "                        data[0]['Task'] = task\n",
+    "                        data[0]['Task'] = { 'IC': 'Image Classification', 'OD': 'Object Detection', 'MT': 'Machine Translation' }.get(task)\n",
     "                                \n",
     "                        if scenario_str in [ 'SingleStream', 'MultiStream', 'Offline', 'Server' ]:\n",
     "                            data[0]['Scenario'] = scenario_to_str.get(scenario, scenario)\n",
@@ -610,12 +610,18 @@
     "                            raise Exception(\"Unsupported scenario '%s'!\" % scenario_str)\n",
     "\n",
     "                        # Tasks.\n",
-    "                        ic1 = (task=='IC' and benchmark.startswith('mobilenet'))\n",
-    "                        ic2 = (task=='IC' and benchmark.startswith('resnet'))\n",
-    "                        od1 = (task=='OD' and benchmark=='ssd-small')\n",
-    "                        od2 = (task=='OD' and (benchmark=='ssd-large' or system_id=='velociti'))\n",
-    "                        nmt = (task=='MT')\n",
-    "\n",
+    "                        if mode == 'spreadsheet':                        \n",
+    "                            ic1 = (task=='IC' and benchmark.startswith('mobilenet'))\n",
+    "                            ic2 = (task=='IC' and benchmark.startswith('resnet'))\n",
+    "                            od1 = (task=='OD' and benchmark=='ssd-small')\n",
+    "                            od2 = (task=='OD' and (benchmark=='ssd-large' or system_id=='velociti'))\n",
+    "                            nmt = (task=='MT')\n",
+    "                        else:\n",
+    "                            ic1 = (task=='IC')\n",
+    "                            ic2 = False\n",
+    "                            od1 = (task=='OD')\n",
+    "                            od2 = False\n",
+    "                            nmt = (task=='MT')\n",
     "                        if scenario_str == 'SingleStream':\n",
     "                            performance_str = '{:.03f}'.format(time_ms)\n",
     "                            accuracy_str    = '{:.03f}'.format(accuracy)\n",
